# liz

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  package-lock.json  package.json
agents/maintenance-triage/: .env.local.example  .gitignore  README.md  pyproject.toml
agents/maintenance-triage/docs/: spark-deploy.md
agents/maintenance-triage/src/: api.py
agents/maintenance-triage/tests/: conftest.py  test_api.py
apps/wiki-chat/: README.md  app.py  pyproject.toml
apps/wiki-chat/wiki_chat/: client.py  corpus.py
archive/: .env.example  CLERK_SETUP_GUIDE.md  README.md  pyproject.toml
archive/apps/arena/: pyproject.toml
archive/apps/arena-web/: package.json
archive/apps/arena-web/app/: page.tsx
archive/apps/arena-web/lib/: models.ts
archive/apps/arena-web/plans/: arena-web.md
archive/apps/arena/arena/: app.py
archive/apps/arena/batch-run/: report.py  run_batch.py
archive/apps/arena/tests/: conftest.py
archive/apps/test-lab/: .env.example  package.json
archive/apps/test-lab/app/: layout.tsx
archive/apps/web/: .env.example  .gitignore  middleware.ts  next.config.ts  playwright.config.ts  tsconfig.json  vercel.json  vitest.config.ts
archive/apps/web/e2e/: auth.spec.ts  dashboard.spec.ts  global.setup.ts  intake.spec.ts  properties.spec.ts
archive/apps/web/e2e-prod/: onboarding-smoke.mjs
archive/apps/web/emails/: reschedule-request.tsx
archive/apps/web/lib/: clerk.ts  payments.ts  types.ts
archive/apps/web/tests/: component-helpers.tsx  helpers.ts
archive/brightstep_process/: PROCESS.md  README.md  claude-md-template.md
archive/brightstep_process/.claude/: settings.local.json.example
archive/brightstep_process/.claude/agents/: gradio-chat.md
archive/brightstep_process/.claude/commands/: create-feature-tasks-in-backlog.md
archive/brightstep_process/.claude/rules/: chat-ui-samples.md  documentation.md  task-execution.md  typescript-frontend.md
archive/brightstep_process/scripts/: autonextstep.py.reference
archive/docs/: STRIPE_SETUP.md  clerk-production-setup.md  endpoints.md
archive/docs/testing-guides/: 01-auth-onboarding.md  02-landlord-dashboard.md  05-requests-landlord.md  09-navigation-layout.md  MANUAL_TEST_GUIDE.md  README.md
archive/inbox/: liz msg.md
archive/scripts/: autonextstep.py  validate-compliance-seed-data.js
archive/supabase/migrations/: 20260411010100_extend_rent_periods.sql  20260413010000_test_lab_schema.sql  20260424010000_arena_results.sql
(+1057 files in other folders)
